[project]
name = "fulltracer"
version = "1.0.0"
description = "Trace the full path of code execution in a customizable way."
readme = "README.md"
authors = [{ name = "Torin Halsted", email = "modularizer@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
keywords = ["trace", "stack", "tracer", "debug", "debugging", "PyCharm", "VSCode", "IDE", "debugger", "coverage"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://modularizer.github.io/fulltracer/"

[project.scripts]
fulltrace = "fulltracer:main"

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[options]
py_modules = ["fulltracer"]
